로그인 정보와 일정 연동